k8s/k8s-usedmarket/backend_depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usedmarket-backend
  namespace: suho
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: usedmarket-backend
  template:
    metadata:
      labels:
        app: usedmarket-backend
    spec:
      containers:
        - name: usedmarket-backend
          image: 371293081109.dkr.ecr.ap-northeast-2.amazonaws.com/usedmarket-backend:latest
          ports:
            - containerPort: 8080

          # 리소스 (EC2 t3.medium 기준 안정적인 수준)
          resources:
            limits:
              cpu: "1"        # 최대 1 vCPU
              memory: "1Gi"   # 최대 1GB
            requests:
              cpu: "0.3"      # 최소 0.3 vCPU
              memory: "512Mi" # 최소 512MB

          # Secret → environment mapping
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10


---
apiVersion: v1
kind: Service
metadata:
  name: usedmarket-backend-service
  namespace: suho
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: usedmarket-backend
