k8s/k8s-usedmarket/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usedmarket-backend-ingress
  namespace: suho
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer

    # 🔻 WebSocket / STOMP 안정화를 위한 설정들
    nginx.ingress.kubernetes.io/websocket-services: "usedmarket-backend-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "api.usedmarket.shop"
    secretName: api-usedmarket-com-tls
  rules:
  - host: api.usedmarket.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usedmarket-backend-service
            port:
              number: 80
